--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==1.6.5
 Pillow==2.5.0
 South==1.0
+certifi==14.05.14
+django-localflavor==1.0
 pytz==2014.4
-wsgiref==0.1.2
+requests==2.4.0
+stripe==1.19.0
